# autobahn

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  WORKSPACE  boost.cmake  build.sh  run_client.sh  run_plugin.sh  run_server.sh  run_tests.sh
.devcontainer/: Dockerfile  devcontainer.json
__autobahn-plugin/: __BUILD
__autobahn-plugin/include/autobahn/: client_config.hpp  plugin_wrapper.hpp  plugin_wrapper.ipp  proxy_controller.hpp  proxy_controller.ipp
__autobahn-plugin/src/: autobahn-plugin.cpp_
autobahn/: BUILD
autobahn/src/: autobahn-client.cpp  autobahn-plugin.cpp  autobahn-server.cpp  broker.hpp  client_config.hpp  client_config_builder.hpp  client_config_service.hpp  client_config_store.hpp  config_builder.hpp  error_codes.cpp  error_codes.hpp  main.cpp  message.hpp  plugin_handler.hpp  plugin_wrapper.hpp  plugin_wrapper.ipp  server_handler.hpp  transport.hpp
autobahn/src/openvpn/: client_config.hpp  client_config_builder.hpp  config.hpp  config_builder.hpp  plugin.hpp  plugin_handle.hpp  plugin_handle.ipp  plugin_service_stub.hpp  plugin_service_stub.ipp  plugin_types.hpp  plugin_wrapper.hpp  plugin_wrapper.ipp  process.hpp
autobahn/tests/: BUILD  client_config_builder_tests.cpp  config_builder_tests.cpp  main.cpp  transport.cpp
